# matfree-autodiff-derivations

./: .gitignore  JVP_derivations.ipynb  __init__.py  autodiff.ipynb  benchmark.py  bidiag.py  bidiagsnippet.py  block_matvec.ipynb  double_pendulum.ipynb  experiment.ipynb  general_linear_operator.md  ideas.md  k=1 solving.md  laplace.ipynb  learning.py  mads.ipynb  matfree_tutorial.py  md.md  pyproject.toml  readme.md  solving.ipynb  solving.md  solving_arnoldi.md  solving_for_chatgpt.md  solving_with_extra_constraint.md  test_bidiag.py  test_bidiag_JVP.py
arnoldi_bidiag/: arnoldi_bidiag.py
arnoldi_iteration_dissection/: arnoldi.py  backward_equivalence.py  forward_equivalence.py  reduction_to_bidiag.py  simplify_arnoldi_to_bidiag.md
bidiag_attractor_experiment/: at.py  attractor.ipynb
eigenfaces/: eigenface.ipynb  eigenface.py
optimizer/: learn_matfree.py  plot_penalty.py  regression_clustered_states.py  regression_exp.py  regularization_experiments.py  robot_arm_clustered_states.py  robot_arm_exp.py
pendulum/: bidiag_pendulum.ipynb  double_pendulum.ipynb  koopman_model.py  pendulum_utils.py  train_tools.py
symbolics/: VJP_adjoint_helper_functions.py  eq.txt  solving bidiag with new constraints.md  symbolic_helper.py  symbolic_helper_bidiag.py  symbolic_helper_bidiag_expanded.py  symbolic_helper_cholesky.py  symbolic_helper_qr.py  tester.ipynb  tree_defs.py  tree_expand.py  tree_exprs.py  tree_simplify.py
tests/: comparison.py  test_bidiag_JVP_VJP.py  test_bidiag_JVP_and_VJP_jax.py  test_bidiag_JVP_jax.py  test_bidiag_JVP_numpy.py  test_bidiag_jax.py
