[project]
name = "differentiable-bidiagonalization"
version = "0.1.0"
description = ""
authors = [
    {name = "Theo",email = "12211068+Whatisthisname@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jax (>=0.5.3,<0.6.0)",
    "plotly",
    "typing-extensions (>=4.13.2,<5.0.0)",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.5"
pytest = "^8.3.5"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
